--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   },
   "homepage": "https://github.com/ConciergeAuctions/styled-material-components#readme",
   "dependencies": {
-    "color": "^1.0.3",
+    "color": "^2.0.0",
     "lodash.merge": "^4.6.0",
-    "react": "^15.5.4",
-    "styled-components": "^2.0.0"
+    "react": "^16.0.0",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.5.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^3.19.0",
+    "eslint": "^4.10.0",
     "eslint-config-concierge-auctions-react": "^0.0.6",
-    "next": "beta",
-    "react-dom": "^15.5.4"
+    "next": "4.1.4",
+    "react-dom": "^16.0.0"
   }
 }
