build(Now): Add now build for PR preview
Adds capability for creating static builds using Zeit's now, which
will enable PRs to include a preview link to the updated
documentation.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src/**",
     "dev": "next dev -p 8080",
     "export": "next build && next export -o docs",
-    "prepublish": "yarn test && yarn build"
+    "prepublish": "yarn test && yarn build",
+    "now-build": "yarn export && cd docs && now"
   },
   "repository": {
     "type": "git",
