--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-material-components",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "coming soon",
   "main": "dist/index.js",
   "scripts": {
@@ -15,14 +15,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ConciergeAuctions/styled-material-components.git"
+    "url":
+      "git+https://github.com/ConciergeAuctions/styled-material-components.git"
   },
   "author": "Brad Decker <bhdecker84@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ConciergeAuctions/styled-material-components/issues"
+    "url":
+      "https://github.com/ConciergeAuctions/styled-material-components/issues"
   },
-  "homepage": "https://github.com/ConciergeAuctions/styled-material-components#readme",
+  "homepage":
+    "https://github.com/ConciergeAuctions/styled-material-components#readme",
   "dependencies": {
     "color": "^2.0.0",
     "lodash.merge": "^4.6.0",
