--- a/src/.babelrc
+++ b/src/.babelrc
@@ -6,6 +6,7 @@
   "plugins": [
     "add-module-exports",
     "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-export-extensions"
   ]
 }
