feat(Drawer): Adds Drawer component
This is definitely a WIP but it adds a lot of functions, not the least
of which is the Portal component that allows to render any other
component inside a portal in the root of the document with an overlay
(so dialogs, and anything like that can use this).

https://docs-txsaxitvca.now.sh

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.10.0",
     "eslint-config-concierge-auctions-react": "^0.0.6",
-    "next": "4.1.4",
+    "next": "^4.1.4",
+    "now": "^9.0.1",
     "react-dom": "^16.0.0"
   }
 }
