--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/ConciergeAuctions/styled-material-components#readme",
   "dependencies": {
+    "classnames": "^2.2.5",
     "color": "^2.0.0",
     "lodash.merge": "^4.6.0",
     "react": "^16.0.0",
