--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           keys:
             - styled-material-components-{{ .Branch }}-{{ checksum "yarn.lock" }}
             - styled-material-components-{{ checksum "yarn.lock" }}
-      - run: yarn install
+      - run: yarn cache clean && yarn install
       - save_cache:
           key: styled-material-components-{{ .Branch }}-{{ checksum "yarn.lock" }}
           paths:
