docs(authors/license): move to root
Remove the author from package.json and put an AUTHORS file in root.

Remove the license from package.json and put a LICENSE file in root.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/ConciergeAuctions/styled-material-components.git"
   },
-  "author": "Brad Decker <bhdecker84@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ConciergeAuctions/styled-material-components/issues"
   },
