--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "color": "^2.0.0",
     "eslint-config-concierge-auctions-base": "^0.0.6",
     "lodash.isequal": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "lodash.merge": "^4.6.0",
     "react": "^16.0.0",
     "styled-components": "^2.2.3"
