--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.5",
     "color": "^2.0.0",
     "eslint-config-concierge-auctions-base": "^0.0.6",
+    "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
     "react": "^16.0.0",
     "styled-components": "^2.2.3"
