--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
+    "platform": "^1.3.5",
     "react": "^16.0.0",
     "react-tunnels": "^1.0.2",
     "recompose": "^0.26.0",
