--- a/package.json
+++ b/package.json
@@ -28,12 +28,10 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "color": "^2.0.0",
-    "eslint-config-concierge-auctions-base": "^0.0.6",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
     "platform": "^1.3.5",
-    "react": "^16.0.0",
     "react-tunnels": "^1.0.2",
     "recompose": "^0.26.0",
     "respondable": "^1.0.1",
@@ -49,14 +47,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.10.0",
+    "eslint-config-concierge-auctions-base": "^0.0.6",
     "eslint-config-concierge-auctions-react": "^0.0.7",
     "husky": "^0.14.3",
     "next": "^4.1.4",
     "now": "^9.0.1",
-    "react-dom": "^16.0.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.2.2"
+  },
+  "peerDependencies": {
+    "react": ">= 0.14.0 < 17.0.0-0"
   }
 }
