--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "yarn lint",
     "clear": "rm -rf dist/*",
-    "build": "yarn clear && babel --out-dir dist src",
-    "lint": "eslint src/**",
+    "build": "yarn clear && next build",
+    "lint": "eslint src",
     "lint:css": "stylelint {src,pages}/**",
     "dev": "next dev -p 8081",
     "export": "next build && next export -o docs",
@@ -35,25 +35,36 @@
     "react-tunnels": "^1.0.2",
     "recompose": "^0.26.0",
     "respondable": "^1.0.1",
-    "styled-components": "^2.2.3"
+    "styled-components": "^3.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-flow": "^7.0.0-beta.46",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.0.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.10.0",
-    "eslint-config-concierge-auctions-base": "^0.0.6",
+    "babel-jest": "^22.4.3",
+    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-relay": "^1.6.0",
+    "babel-plugin-styled-components": "^1.5.1",
+    "eslint": "^4.19.1",
     "eslint-config-concierge-auctions-react": "^0.0.7",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-react": "^7.7.0",
+    "flow-bin": "^0.71.0",
+    "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
-    "next": "^4.1.4",
-    "now": "^9.0.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "next": "^6.0.3",
+    "now": "^11.1.16",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
     "stylelint-config-styled-components": "^0.1.1",
