--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepublish": "yarn test && yarn build",
     "now-build": "yarn export && cd docs && now",
     "prepush": "yarn lint",
+    "start": "next -p 8081",
     "postcommit": "bash ./scripts/update-authors.sh"
   },
   "repository": {
@@ -32,6 +33,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.0",
     "platform": "^1.3.5",
+    "ramda": "^0.25.0",
     "react-tunnels": "^1.0.2",
     "recompose": "^0.26.0",
     "respondable": "^1.0.1",
@@ -49,6 +51,7 @@
     "babel-plugin-inline-dotenv": "^1.1.2",
     "babel-plugin-relay": "^1.6.0",
     "babel-plugin-styled-components": "^1.5.1",
+    "danger": "^3.7.15",
     "eslint": "^4.19.1",
     "eslint-config-concierge-auctions-react": "^0.0.7",
     "eslint-import-resolver-webpack": "^0.9.0",
@@ -62,9 +65,10 @@
     "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
     "next": "^6.0.3",
-    "now": "^11.1.16",
+    "now": "^11.2.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "shelljs": "^0.8.2",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.1.0",
     "stylelint-config-styled-components": "^0.1.1",
