fix(Build): Fix build scripts
Fix build script to compile code to dist
Reassign static site building with next to build-static
Add .babelrc, add necessary babel packages, remove unused ones

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "yarn lint",
     "clear": "rm -rf dist/*",
-    "build": "yarn clear && next build",
+    "build": "yarn clear && babel src --out-dir dist",
+    "build-static": "yarn clear && next build",
     "lint": "eslint src",
     "lint:css": "stylelint {src,pages}/**",
     "dev": "next dev -p 8081",
-    "export": "next build && next export -o docs",
+    "export": "yarn build-static && next export -o docs",
     "prepublish": "yarn test && yarn build",
     "now-build": "yarn export && cd docs && now",
     "prepush": "yarn lint",
@@ -40,16 +41,15 @@
     "styled-components": "^3.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.49",
     "@babel/core": "^7.0.0-beta.46",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-flow": "^7.0.0-beta.46",
-    "babel-core": "7.0.0-bridge.0",
+    "@babel/preset-react": "^7.0.0-beta.49",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^22.4.3",
-    "babel-plugin-inline-dotenv": "^1.1.2",
-    "babel-plugin-relay": "^1.6.0",
     "babel-plugin-styled-components": "^1.5.1",
     "danger": "^3.7.15",
     "eslint": "^4.19.1",
