--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,11 +1,10 @@
 {
-  "comments": false,
-  "plugins": [],
-  "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ]
+    "presets": [
+      "@babel/react",
+      "@babel/env"
+    ],
+    "plugins": [
+      "@babel/proposal-class-properties",
+      "styled-components"
+    ]
 }
