--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-material-components",
-  "version": "0.0.54",
+  "version": "0.0.55-0",
   "description": "coming soon",
   "main": "dist/index.js",
   "scripts": {
