--- a/.babelrc
+++ b/.babelrc
@@ -1,39 +1,8 @@
 {
-  "plugins": [],
-  "passPerPreset": true,
   "presets": [
-    ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
+      "next/babel"
   ],
-  "env": {
-    "development": {
-      "presets": [
-        ["env"],
-        "next/babel",
-      ],
-      "plugins": [
-        ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false }]
-      ]
-    },
-    "test": {
-      "presets": [
-        ["env"],
-        "next/babel",
-      ],
-      "plugins": [
-        ["babel-plugin-styled-components"]
-      ]
-    },
-    "production": {
-      "presets": [
-        "next/babel",
-      ],
-      "plugins": [
-        ["babel-plugin-styled-components", { "ssr": true, "displayName": true, "preprocess": false}]
-      ]
-    },
-  }
+  "plugins": [
+      "transform-flow-strip-types"
+  ]
 }
