--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "8.0.2",
+    "babel-eslint": "^8.0.2",
     "babel-jest": "^22.4.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-styled-components": "^1.5.1",
@@ -59,17 +59,17 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-utils": "^1.3.0",
     "enzyme-to-json": "^3.3.3",
-    "eslint": "4.10.0",
-    "eslint-config-concierge-auctions-react": "0.0.7",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-import-resolver-webpack": "0.9.0",
-    "eslint-plugin-flowtype": "2.46.3",
-    "eslint-plugin-import": "2.11.0",
-    "eslint-plugin-jest": "21.15.1",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.8.2",
+    "eslint": "^4.10.0",
+    "eslint-config-concierge-auctions-react": "^0.0.7",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-import-resolver-webpack": "^0.9.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
     "flow-bin": "^0.72.0",
     "flow-typed": "^2.2.3",
     "husky": "^0.14.3",
@@ -90,9 +90,6 @@
   },
   "peerDependencies": {
     "react": ">= 0.14.0 < 17.0.0-0"
-  },
-  "resolutions": {
-    "eslint-scope": "3.7.1"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./test/setup.js",
