--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "styled-material-components",
-  "version": "0.0.55-0",
+  "version": "0.1.1-beta",
   "description": "coming soon",
-  "main": ".build/styled-material-components.cjs.js",
-  "module": ".build/styled-material-components.esm.js",
-  "jsnext:main": ".build/bundle.js",
+  "main": "dist/styled-material-components.cjs.js",
+  "module": "dist/styled-material-components.esm.js",
+  "jsnext:main": "dist/styled-material-components.esm.js",
   "scripts": {
     "test": "yarn lint",
     "clear": "rm -rf dist/*",
-    "build": "yarn clear && babel src --out-dir dist",
+    "build": "yarn clear && rollup -c",
     "build-static": "yarn clear && next build",
     "lint": "eslint src",
     "lint:css": "stylelint {src,pages}/**",
     "dev": "next dev -p 8081",
     "export": "yarn build-static && next export -o docs",
-    "prepublishOnly": "yarn test && yarn build",
+    "prepublishOnly": "yarn build",
     "now-build": "yarn export && cd docs && now",
     "prepush": "yarn lint",
     "start": "next -p 8081",
@@ -39,9 +39,7 @@
     "ramda": "^0.25.0",
     "react-tunnels": "^1.0.2",
     "recompose": "^0.26.0",
-    "respondable": "^1.0.1",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^2.0.2"
+    "respondable": "^1.0.1"
   },
   "peerDependencies": {
     "react": "^16.4.0",
@@ -81,6 +79,8 @@
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-terser": "^2.0.2",
     "shelljs": "^0.8.2",
     "styled-components": "^4.0.0-beta.1",
     "stylelint": "^9.1.1",
