--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-material-components",
-  "version": "0.1.1-beta.1",
+  "version": "0.1.1-beta.2",
   "description": "coming soon",
   "main": "dist/styled-material-components.cjs.js",
   "module": "dist/styled-material-components.esm.js",
@@ -50,13 +50,13 @@
     "@babel/cli": "^7.0.0-beta.49",
     "@babel/core": "^7.0.0-beta.46",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-flow": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.49",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^22.4.3",
-    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-styled-components": "^1.7.0-0",
     "danger": "^3.7.15",
     "eslint": "^4.19.1",
     "eslint-config-concierge-auctions-react": "^0.0.7",
