--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styled-material-components",
-  "version": "0.1.3",
+  "version": "0.1.4-0",
   "description": "coming soon",
   "main": "dist/styled-material-components.cjs.js",
   "module": "dist/styled-material-components.esm.js",
